downgrade verison of tailwindcss to v4 form v5 to fix text color and modal issues on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,13 +1,9 @@
-@import "tailwindcss";
-@plugin "daisyui";
-
-@theme {
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  /*font-family: Arial, Helvetica, sans-serif;*/
   background-image: url('../public/images/angles-pattern.png');
   background-attachment: fixed;
   /*background-repeat: no-repeat;*/
